<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/previous"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="371dp"
        android:layout_height="25dp"
        android:text="@string/selectCrust"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="371dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:text="@string/selectSauce"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crustType" />

    <CheckBox
        android:id="@+id/sausage"
        android:layout_width="114dp"
        android:layout_height="44dp"
        android:text="@string/sausage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chicken"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <CheckBox
        android:id="@+id/pepperoni"
        android:layout_width="114dp"
        android:layout_height="44dp"
        android:text="@string/pepperoni"
        app:layout_constraintEnd_toStartOf="@+id/chicken"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <CheckBox
        android:id="@+id/chicken"
        android:layout_width="114dp"
        android:layout_height="44dp"
        android:text="@string/chicken"
        app:layout_constraintEnd_toStartOf="@+id/sausage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pepperoni"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <CheckBox
        android:id="@+id/peppers"
        android:layout_width="114dp"
        android:layout_height="44dp"
        android:text="@string/peppers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/onion"
        app:layout_constraintTop_toBottomOf="@+id/sausage" />

    <CheckBox
        android:id="@+id/mushroom"
        android:layout_width="114dp"
        android:layout_height="44dp"
        android:text="@string/mushroom"
        app:layout_constraintEnd_toStartOf="@+id/onion"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pepperoni" />

    <CheckBox
        android:id="@+id/onion"
        android:layout_width="114dp"
        android:layout_height="44dp"
        android:text="@string/onion"
        app:layout_constraintEnd_toStartOf="@+id/peppers"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mushroom"
        app:layout_constraintTop_toBottomOf="@+id/chicken" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="371dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:text="@string/selectTopping"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sauceType" />

    <RadioGroup
        android:id="@+id/sauceType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/redSauce"
            android:layout_width="114dp"
            android:layout_height="44dp"
            android:text="@string/redSauce"
            app:layout_constraintEnd_toStartOf="@+id/whiteSauce"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <RadioButton
            android:id="@+id/noSauce"
            android:layout_width="114dp"
            android:layout_height="44dp"
            android:text="@string/noSauce"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/whiteSauce"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <RadioButton
            android:id="@+id/whiteSauce"
            android:layout_width="114dp"
            android:layout_height="44dp"
            android:text="@string/whiteSauce"
            app:layout_constraintEnd_toStartOf="@+id/noSauce"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/redSauce"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/crustType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/panFried"
            android:layout_width="114dp"
            android:layout_height="44dp"
            android:text="@string/panFried"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/deepDish"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <RadioButton
            android:id="@+id/deepDish"
            android:layout_width="114dp"
            android:layout_height="44dp"
            android:text="@string/deepDish"
            app:layout_constraintEnd_toStartOf="@+id/panFried"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/thinCrust"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <RadioButton
            android:id="@+id/thinCrust"
            android:layout_width="114dp"
            android:layout_height="44dp"
            android:text="@string/thinCrust"
            app:layout_constraintEnd_toStartOf="@+id/deepDish"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />
    </RadioGroup>
    <Switch
        android:id="@+id/packpunch"
        android:layout_width="371dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:text="@string/packpunch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onion" />

    <EditText
        android:id="@+id/total"
        android:layout_width="189dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/place"
        app:layout_constraintTop_toBottomOf="@+id/packpunch" />

    <Button
        android:id="@+id/place"
        android:layout_width="189dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/place"
        app:layout_constraintEnd_toStartOf="@+id/total"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/packpunch" />

</androidx.constraintlayout.widget.ConstraintLayout>