<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/start"
        android:layout_width="136dp"
        android:layout_height="72dp"
        android:foregroundGravity="center_horizontal"
        android:gravity="center"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/history"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company"
        app:layout_constraintVertical_bias="0.062" />

    <Button
        android:id="@+id/history"
        android:layout_width="136dp"
        android:layout_height="72dp"
        android:foregroundGravity="center_horizontal"
        android:gravity="center"
        android:text="@string/recent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/start"
        app:layout_constraintTop_toBottomOf="@+id/company"
        app:layout_constraintVertical_bias="0.062" />

    <ImageView
        android:id="@+id/company"
        android:layout_width="401dp"
        android:layout_height="391dp"
        android:layout_marginTop="28dp"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/pizza"
        android:foregroundGravity="center"
        android:src="@drawable/petesza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="372dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:background="#FFEB3B"
        android:fontFamily="casual"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/company"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#385913"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/company"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="@+id/company"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>